Remove large files from history and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,125 +1,3 @@
-# OS specific files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# IDE and editor files
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-.project
-.settings/
-*.sublime-workspace
-*.sublime-project
-
-# Build and dependency directories
-node_modules/
-dist/
-build/
-target/
-out/
-.next/
-.nuxt/
-.output/
-vendor/
-
-# Environment and secret files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*.pem
-.secret*
-translation_env
-
-# Log files and caches
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-.cache/
-.npm/
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-# Python specific
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-.env
-.venv
-env.bak/
-venv.bak/
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Java specific
-*.class
-*.jar
-*.war
-*.ear
-*.logs
-.gradle/
-.mvn/
-
-# Misc
-.lock-wscript
-.node_repl_history
-.eslintcache
-.stylelintcache
-.temp/
-
-# AI and ML specific
-models/
-gateway/ai_service/models/
-models/translation/translation_env/
-gateway/ai_service/tiny/
-gateway/ai_service/db.sqlite3
-gateway/ai_service/audio/
-gateway/ai_service/audio_files/
-ai-raw-pipeline/synthetic_data/
-ai-raw-pipeline/wav2vec/
-helplinev1/docker/mysql/
-backend/api/
-docs/dist.zip
-docs/docs/training/OPENCHS-PITCHDECK.mp4
-
-# Binary and data files
-*.pt
-*.safetensors
-*.dylib
-*.sql
-*.mp4
-*.zip
-*.json
-
-# Audio files
-*.mp3
-*.wav
-*.aac
-*.m4a
-*.ogg
-*.flac
-*.wma
-*.aiff
-*.mid
-*.midi
+# Ignore large files
+**/models/
+**/*.sql
