--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,11 @@ on:
     paths:
       - 'docs/**'
       - '.github/workflows/ci-cd.yml'
-  workflow_dispatch:
+  workflow_dispatch: 
+  
+  permissions:
+  contents: read
+
 
 env:
   NODE_VERSION: '18.0.0'
