--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -30,6 +30,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Debug - Check directory structure
+      run: |
+        echo "Current directory:"
+        pwd
+        echo "Repository structure:"
+        ls -la
+        echo "AI Service directory:"
+        ls -la ai_service/
+        
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -53,7 +62,7 @@ jobs:
       working-directory: ${{ env.WORKING_DIRECTORY }}
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov pytest-asyncio pytest-mock
+        pip install pytest pytest-cov pytest-asyncio pytest-mock httpx
         pip install -r requirements.txt
         
     - name: Create test directories
