--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -62,7 +62,7 @@ jobs:
       working-directory: ${{ env.WORKING_DIRECTORY }}
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov pytest-asyncio pytest-mock httpx
+        pip install pytest pytest-cov pytest-asyncio pytest-mock pytest-benchmark httpx websockets
         pip install -r requirements.txt
         
     - name: Create test directories
