--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -2,42 +2,38 @@ name: Frontend CI Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main]
     paths:
-      - 'frontend/**'
-      - '.github/workflows/frontend-ci.yml'
+      - 'frontend/**'                    # Only run when frontend changes
+      - '.github/workflows/frontend-ci.yml'  # Or workflow changes
   pull_request:
-    branches: [main, develop]
+    branches: [main]
     paths:
-      - 'frontend/**'
-      - '.github/workflows/frontend-ci.yml'
-
-permissions:
-  contents: read
+      - 'frontend/**'                    # Only run when frontend changes  
+      - '.github/workflows/frontend-ci.yml'  # Or workflow changes
 
 jobs:
   build-and-test:
     name: Build and Test Frontend
     runs-on: ubuntu-latest
-    timeout-minutes: 15
 
     defaults:
       run:
         working-directory: frontend/call-center-case-mgmt
 
+    # ... rest stays the same
+
     steps:
       - name: ⬇️ Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: 🟢 Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: frontend/call-center-case-mgmt/package-lock.json
+          node-version: 18
 
       - name: 📦 Cache node_modules
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: |
             ~/.npm
@@ -46,144 +42,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: 🔍 Debug - Check package files
-        run: |
-          echo "Frontend directory contents:"
-          ls -la
-          echo "Checking package files:"
-          [ -f package.json ] && echo "✅ package.json exists" || echo "❌ package.json missing"
-          [ -f package-lock.json ] && echo "✅ package-lock.json exists" || echo "❌ package-lock.json missing"
-          if [ -f package-lock.json ]; then
-            echo "Package-lock.json lockfileVersion:"
-            grep -o '"lockfileVersion":[^,]*' package-lock.json || echo "No lockfileVersion found"
-          fi
-
       - name: 📥 Install dependencies
-        run: |
-          # Try npm ci first, fallback to npm install if package-lock.json issues
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            echo "⚠️ No package-lock.json found, running npm install"
-            npm install
-            echo "🔧 Generating package-lock.json for future runs"
-          fi
+        run: npm ci
 
       - name: 🧪 Run Unit Tests (Vitest)
         run: npm run test:run
-        continue-on-error: true
 
       - name: 🛠️ Build Frontend App
         run: npm run build
 
-      - name: 📊 Bundle Size Check
-        run: |
-          if [ -d "dist" ]; then
-            echo "📦 Build output size:"
-            du -sh dist/
-            echo "📋 Build contents:"
-            ls -la dist/
-          else
-            echo "❌ Build directory not found"
-            exit 1
-          fi
-
-      - name: 📁 Upload production build
+      - name:  Upload production build (optional)
         uses: actions/upload-artifact@v4
         with:
           name: frontend-build
           path: frontend/call-center-case-mgmt/dist
-          retention-days: 30
-
-  lint-and-format:
-    name: Lint & Format Check
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-
-    defaults:
-      run:
-        working-directory: frontend/call-center-case-mgmt
-
-    steps:
-      - name: ⬇️ Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 🟢 Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: frontend/call-center-case-mgmt/package-lock.json
-
-      - name: 📥 Install dependencies
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
-
-      - name: 🎨 Check code formatting (if Prettier configured)
-        run: |
-          if npm list prettier &>/dev/null; then
-            npx prettier --check src/
-          else
-            echo "⚠️ Prettier not configured, skipping format check"
-          fi
-        continue-on-error: true
-
-      - name: 🔍 Run ESLint (if configured)
-        run: |
-          if npm list eslint &>/dev/null; then
-            npm run lint || npx eslint src/
-          else
-            echo "⚠️ ESLint not configured, skipping lint check"
-          fi
-        continue-on-error: true
-
-      - name: 🏷️ TypeScript type checking (if configured)
-        run: |
-          if [ -f "tsconfig.json" ]; then
-            npx tsc --noEmit
-          else
-            echo "⚠️ TypeScript not configured, skipping type check"
-          fi
-        continue-on-error: true
-
-  security-audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    defaults:
-      run:
-        working-directory: frontend/call-center-case-mgmt
-
-    steps:
-      - name: ⬇️ Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 🟢 Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: 📥 Install dependencies
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci --audit
-          else
-            npm install
-          fi
-
-      - name: 🛡️ Run npm audit
-        run: npm audit --audit-level=high
-        continue-on-error: true
-
-      - name: 📋 Generate dependency report
-        run: |
-          echo "📦 Installed packages:"
-          npm list --depth=0
-          echo "🔍 Outdated packages:"
-          npm outdated || echo "All packages up to date"
-        continue-on-error: true
