--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -1,7 +1,12 @@
 aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.9.0
+asttokens==3.0.0
+attrs==25.3.0
 audioread==3.0.1
 billiard==4.2.1
 blis==1.3.0
@@ -15,35 +20,50 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 cloudpathlib==0.21.1
+comm==0.2.3
 confection==0.1.5
 cymem==2.0.11
+debugpy==1.8.15
 decorator==5.2.1
 en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl#sha256=5e6329fe3fecedb1d1a02c3ea2172ee0fede6cea6e4aefb6a02d832dba78a310
+executing==2.2.0
 fastapi==0.116.1
 filelock==3.18.0
 flower==2.0.1
+frozenlist==1.7.0
 fsspec==2025.7.0
 h11==0.16.0
 hf-xet==1.1.5
 huggingface-hub==0.33.4
 humanize==4.12.3
 idna==3.10
+iniconfig==2.1.0
+ipykernel==6.30.0
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 kombu==5.5.4
 langcodes==3.5.0
 language_data==1.3.0
 lazy_loader==0.4
 librosa==0.11.0
 llvmlite==0.44.0
+logger==1.4
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 more-itertools==10.7.0
 mpmath==1.3.0
 msgpack==1.1.1
+multidict==6.6.3
 murmurhash==1.0.13
+nest-asyncio==1.6.0
 networkx==3.5
 numba==0.61.2
 numpy==2.2.6
@@ -63,23 +83,34 @@ nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
 openai-whisper==20250625
 packaging==25.0
+pandas==2.3.1
+parso==0.8.4
+pexpect==4.9.0
 platformdirs==4.3.8
+pluggy==1.6.0
 pooch==1.8.2
 preshed==3.0.10
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
+propcache==0.3.2
 protobuf==6.31.1
 psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+pydub==0.25.1
 Pygments==2.19.2
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
+pyzmq==27.0.0
 redis==6.2.0
 regex==2024.11.6
 requests==2.32.4
@@ -100,6 +131,7 @@ spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
+stack-data==0.6.3
 starlette==0.47.2
 sympy==1.14.0
 thinc==8.3.6
@@ -107,8 +139,10 @@ threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.2
 torch==2.7.1
+torchaudio==2.7.1
 tornado==6.5.1
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.53.3
 triton==3.3.1
 typer==0.16.0
@@ -121,4 +155,6 @@ vine==5.1.0
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
+websockets==15.0.1
 wrapt==1.17.2
+yarl==1.20.1
