--- a/gateway/ai_service/pytest.ini
+++ b/gateway/ai_service/pytest.ini
@@ -3,7 +3,7 @@ DJANGO_SETTINGS_MODULE = ai_service.settings
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = --tb=short --strict-markers --reuse-db
+addopts = --tb=short --strict-markers --reuse-db --asyncio-mode=auto
 testpaths = tests
 markers =
     unit: unit tests
