--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,50 +1,28 @@
-name: Frontend CI Pipeline
+name: Frontend CI
 
 on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
 
 jobs:
-  build-and-test:
-    name: Build and Test Frontend
+  build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: frontend/call-center-case-mgmt
-
     steps:
-      - name: ⬇️ Checkout Repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-name: 🟢 Set up Node.js
-uses: actions/setup-node@v3
-with:
-  node-version: 18
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-name: 📦 Cache node_modules
-uses: actions/cache@v3
-with:
-  path: |
-    ~/.npm
-    frontend/call-center-case-mgmt/node_modules
-  key: ${{ runner.os }}-node-${{ hashFiles('frontend/call-center-case-mgmt/package-lock.json') }}
-  restore-keys: |
-    ${{ runner.os }}-node-
+      - name: Install dependencies
+        run: npm ci
 
-name: 📥 Install dependencies
-run: npm ci
+      - name: Run tests
+        run: npm test
 
-name: 🧪 Run Unit Tests (Vitest)
-run: npm run test:run
-
-name: 🛠️ Build Frontend App
-run: npm run build
-
-name: 📁 Upload production build (optional)
-uses: actions/upload-artifact@v4
-with:
-  name: frontend-build
-  path: frontend/call-center-case-mgmt/dist
+      - name: Build
+        run: npm run build
