--- a/helplinev1/docker-compose.yml
+++ b/helplinev1/docker-compose.yml
@@ -9,12 +9,11 @@ services:
       MYSQL_USER: helpline_user
       MYSQL_PASSWORD: helpline_pass
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./rest_api/config/uchl.sql:/docker-entrypoint-initdb.d/01-complete-schema.sql
+      - ./rest_api/config/uchl.sql:/docker-entrypoint-initdb.d/01-schema.sql
       - ./docker/mysql/init-user.sql:/docker-entrypoint-initdb.d/02-init-user.sql
-      - ./docker/mysql/03-missing-columns.sql:/docker-entrypoint-initdb.d/03-missing-columns.sql
     restart: unless-stopped
     networks:
       - helpline-network
@@ -49,7 +48,7 @@ services:
       dockerfile: docker/nginx/Dockerfile
     container_name: helpline-nginx
     ports:
-      - "8888:80"
+      - "8087:80"
       - "8443:443"
     volumes:
       - ./application:/var/www/html/helpline
