--- a/helplinev1/docker/nginx/helpline.conf
+++ b/helplinev1/docker/nginx/helpline.conf
@@ -39,22 +39,21 @@ server {
 
     # Direct API access
     location /helpline/ {
-    index index.php index.html index.htm;
-    try_files $uri $uri/ /helpline/api/index.php?$args;
+       # alias /var/www/html/helpline//;
+       index index.php index.html index.htm;
+        try_files $uri $uri/ /helpline/api/index.php?$args;
 
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm;
-        fastcgi_index index.php;
-        fastcgi_read_timeout 300;
-        include fastcgi_params;
-
-        # ✅ This ensures NGINX finds PHP scripts correctly in container context
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        location ~ \.php$ {
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass php-fpm;
+            fastcgi_index index.php;
+            fastcgi_read_timeout 300;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
+    
     }
-}
-
 
     # Static assets - cache for performance
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
