--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -105,6 +105,8 @@ pydantic_core==2.33.2
 pydub==0.25.1
 Pygments==2.19.2
 pytest==8.4.1
+pytest-asyncio==0.25.0
+pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
