--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -1,4 +1,5 @@
 name: HelplineV1 CI
+
 permissions:
   contents: read
 
@@ -16,6 +17,7 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     services:
       mysql:
         image: mysql:5.7
@@ -25,17 +27,20 @@ jobs:
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping"
+          --health-cmd="mysqladmin ping -h localhost"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
 
       - name: Build PHP image
         run: |
@@ -48,11 +53,17 @@ jobs:
       - name: Run Docker Compose
         working-directory: helplinev1
         run: |
-          docker compose up -d
+          docker-compose up -d
 
-      - name: Wait for app to be ready
-        run: sleep 20  # Allow containers to settle
+      - name: Wait for services to be ready
+        run: sleep 20
 
-      - name: Check web endpoint
+      - name: Check Web Endpoint
         run: |
           curl -I http://localhost || echo "Web check failed"
+
+      - name: Tear down Docker Compose
+        if: always()
+        working-directory: helplinev1
+        run: |
+          docker-compose down
