--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -16,7 +16,6 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    
 
     steps:
       - name: Checkout code
@@ -44,3 +43,14 @@ jobs:
       - name: Check web endpoint
         run: |
           curl -I http://localhost || echo "Web check failed"
+
+      - name: Run PHPUnit tests with coverage
+        working-directory: helplinev1
+        run: |
+          docker compose exec -T php ./vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml
+
+      - name: Upload code coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: clover.xml
+          path: helplinev1/clover.xml
