--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Run PHPUnit tests with coverage
         working-directory: helplinev1
         run: |
-          docker compose exec -T php ./vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml
+          docker compose exec -T php-api ./vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml
 
       - name: Upload code coverage report
         uses: actions/upload-artifact@v4
