Fix .gitignore to not ignore app/models/ Python source files
- Keep ignoring /models/ directory (for model weights/binaries)
- Add specific model file extensions to ignore
- This was causing all model Python files to be missing from GitHub

--- a/ai_service/.gitignore
+++ b/ai_service/.gitignore
@@ -54,4 +54,11 @@ db.sqlite3
 
 # Logs
 *.log
+
+# Model weights and binaries (not Python source code)
 /models/
+*.bin
+*.safetensors
+*.onnx
+*.pt
+*.pth
