--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -277,6 +277,17 @@ jobs:
       - name: 🛎️ Checkout code
         uses: actions/checkout@v4
 
+      - name: 🧹 Free disk space
+        run: |
+          # Clean up Docker resources
+          docker system prune -af
+          # Remove unnecessary packages and files
+          sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/share/boost /usr/local/.ghcup || true
+          sudo apt-get autoremove -y || true
+          sudo apt-get autoclean || true
+          # Show available disk space
+          df -h
+
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -304,7 +315,6 @@ jobs:
             --tag ai-service-test:latest \
             --tag ai-service-test:${{ github.sha }} \
             --build-arg BUILDKIT_INLINE_CACHE=1 \
-            --cache-from ai-service-test:latest \
             .
           
           echo "✅ Docker build completed"
@@ -446,8 +456,8 @@ jobs:
           echo "📊 Collecting container logs..."
           mkdir -p logs/integration
           
-          docker compose logs --no-color --timestamps ai-pipeline > logs/integration/ai-pipeline.log 2>&&1 || true
-          docker compose logs --no-color --timestamps redis > logs/integration/redis.log 2>&&1 || true
+          docker compose logs --no-color --timestamps ai-pipeline > logs/integration/ai-pipeline.log 2>&1 || true
+          docker compose logs --no-color --timestamps redis > logs/integration/redis.log 2>&1 || true
           
           echo "📋 Log files created:"
           ls -la logs/integration/ || echo "No logs collected"
